@@ -334,7 +334,7 @@ throw (Error <NOT_SUPPORTED>,
 
 		coord -> point () .assign (getVertices () .begin (), getVertices () .begin () + getElements () [0] .count - 2);
 
-		for (const auto & point : std::make_pair (getTexCoords () [0] .begin (), getTexCoords () [0] .begin () + getElements () [0] .count))
+		for (const auto & point : basic::make_range (getTexCoords () [0] .begin (), getElements () [0] .count))
 			texCoord -> point () .emplace_back (point .x (), point .y ());
 
 		int32_t       i    = 0;
@@ -371,7 +371,7 @@ throw (Error <NOT_SUPPORTED>,
 		{
 			const int32_t tb = texCoord -> point () .size ();
 
-			for (const auto & point : std::make_pair (getTexCoords () [0] .begin (), getTexCoords () [0] .begin () + getElements () [0] .count))
+			for (const auto & point : basic::make_range (getTexCoords () [0] .begin (), getElements () [0] .count))
 				texCoord -> point () .emplace_back (1 - point .x (), point .y ());
 
 			i = 0;
