@@ -165,13 +165,13 @@ Extrusion::createPoints (const bool hasCaps)
 
 		if (beginCap ())
 		{
-			for (const auto & point : std::make_pair (points .begin (), points .begin () + crossSection () .size ()))
+			for (const auto & point : basic::make_range (points .begin (), crossSection () .size ()))
 				points .emplace_back (point);
 		}
 
 		if (endCap ())
 		{
-			for (const auto & point : std::make_pair (last, last + crossSection () .size ()))
+			for (const auto & point : basic::make_range (last, crossSection () .size ()))
 				points .emplace_back (point);
 		}
 	}
