@@ -1,3 +1,7 @@
+2014-10-24  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Range.h: 
+
 2014-10-23  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* URI.h:
