@@ -1,5 +1,10 @@
 2014-10-24  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineFields.h:
+	* X3DPrimitiveCountEditor.cpp: 
+
+2014-10-24  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* titania:
 	* Makefile.am:
 	* style.css:
